# csl-mobile-bridge

./: .eslintrc.js  .gitignore  CMakeLists.txt  CONTRIBUTING.md  INSTALLATION_GUIDE.md  README.md  emurgo-csl-mobile-bridge.podspec  package.json  react-native.config.js  setup-rust-environment.sh  tsconfig.json  yoroi-classic-csl-mobile-bridge.podspec
.github/: dependabot.yml
.github/workflows/: bridge-tests.yml  dependency-review.yml
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CslMobileBridgeModule.cpp
android/src/main/java/cloud/blinklabs/yoroi/cslmobilebridge/: CslMobileBridgeModule.java  CslMobileBridgePackage.java
android/src/main/java/com/emurgo/cslmobilebridge/: CslMobileBridgeModule.java  CslMobileBridgeModule.kt  CslMobileBridgePackage.java  CslMobileBridgePackage.kt
cpp/: CMakeLists.txt  NativeCslMobileBridgeModule.cpp  NativeCslMobileBridgeModule.h  README.md  base64.h  utils.h
example/: .gitignore  README.md  app.json  metro.config.js  package.json  tsconfig.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/anonymous/cslmobilebridgeexample/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/java/com/cslmobilebridgeexample/: MainApplication.kt
example/android/app/src/main/java/emurgo/cslmobilebridge/example/: MainActivity.kt  MainApplication.kt
example/app/: index.tsx  styles.ts  types.ts
example/app/(tabs)/: index.tsx
example/app/examples/: AddressExamples.tsx  BigNumExamples.tsx  BlockExamples.tsx  CryptographyExamples.tsx  HeaderBodyExamples.tsx  MetadataExamples.tsx  PoolParamsExamples.tsx  ProtocolParametersExamples.tsx  SingleHostAddrExamples.tsx  SingleHostNameExamples.tsx  TransactionBodyExamples.tsx  TransactionExamples.tsx  ValueExamples.tsx
example/ios/: Podfile
example/ios/CslMobileBridgeExample/: AppDelegate.swift  Info.plist
example/ios/CslMobileBridgeExample.xcodeproj/: project.pbxproj
example/ios/emurgocslmobilebridgeexample/: Info.plist
example/ios/emurgocslmobilebridgeexample.xcodeproj/: project.pbxproj
example/ios/emurgocslmobilebridgeexample.xcodeproj/xcshareddata/xcschemes/: emurgocslmobilebridgeexample.xcscheme
example/ios/emurgocslmobilebridgeexample.xcworkspace/: contents.xcworkspacedata
example/ios/ios/: CslMobileBridge.h
example/src/: App.tsx
example/src/runtimeTests/: bigNum.ts
ios/: CslMobileBridge.h  CslMobileBridge.mm  CslMobileBridgeOnLoad.mm  build.sh
rust/: Cargo.toml
rust/src/: ptr_impl.rs
rust/src/c_bridge/: bridge.rs  mod.rs
rust/src/c_bridge/bridge_tools/: data.rs  ptr_c.rs  string.rs
src/: BigNum.ts  BridgeTypes.ts  NativeCslMobileBridge.ts  index.ts  index.tsx
src/__tests__/: index.test.js  package-metadata.test.js
