[package]
name = "csl-mobile-bridge"
version = "5.1.2"
authors = ["yoroi-classic contributors"]
edition = "2018"

[build-dependencies]
cbindgen = "=0.26.0"

[dependencies]
cardano-serialization-lib = "15.0.3"
byteorder = "1.4.3"
base64 = "0.20.0"
# tag = "2.3.1"

[target.'cfg(target_os="android")'.dependencies]
jni = "0.20.0"

[lib]
name = "react_native_haskell_shelley"
crate-type = ["staticlib", "cdylib"]

[profile.release]
debug = false
opt-level = 's'
lto = false
